docs: Auth 엔드포인트 Swagger 주석 추가
